--- a/cliente/src/components/ExibirDados.module.css
+++ b/cliente/src/components/ExibirDados.module.css
@@ -2,11 +2,12 @@
     margin-top: 1em;
     display: flex;
     justify-content: center;
-    cursor: pointer;
+  
 }
 
 .item{
-
+    cursor: pointer;
+    font-size: 5pt;
     border: solid black 2px;
     border-radius: 20px;
     padding: .5em;
@@ -37,20 +38,5 @@
 
 
 
-.icone{
-    padding: .4em;
-    font-size: 1.2em;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    transition: .5s;
-    border-radius: 5px;
-    color: #000;
-}
 
-.icone:hover{
-    color: #fff;
-    background-color: #9A3333;
-
-}
 
