--- a/cliente/src/components/modulos/Produto/cadastrarProduto.module.css
+++ b/cliente/src/components/modulos/Produto/cadastrarProduto.module.css
@@ -26,3 +26,53 @@ input{
 button{
   text-align: center;
 }
+
+/* Seletor para o select */
+.select {
+    width: 70%;
+    height: 40px;
+    border:solid 2px #7b7b7b;
+    border-radius: 10px;
+    padding: 0 10px;
+    font-size: 14px;
+    font-family: sans-serif;
+    margin-bottom: 10px;
+  }
+  
+  /* Seletor para as opções do select */
+  .select option {
+    padding: 5px 10px;
+    background-color: #fff;
+    color: #222;
+    font-size: 14px;
+  }
+  
+  /* Seletor para a opção selecionada */
+  .select option:hover,
+  .select option:focus {
+    background-color: #ddd;
+    color: #000;
+  }
+  
+  /* Seletor para a seta do select */
+  .select:after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    border-left: 7px solid #ccc;
+  }
+  
+  /* Seletor para o drop down do select */
+  .select:focus:after {
+    border-left-color: #000;
+  }
+
+  label{
+    font-weight: bold;
+    width: 100%;
+  }
