--- a/cliente/src/components/search/Busca.module.css
+++ b/cliente/src/components/search/Busca.module.css
@@ -8,16 +8,12 @@
     justify-content: center;
     align-items: center;
 }
-.icone{
-    font-size: 2em;
-    
-}
 
 .pesquisa input{
-    padding: 1em;
+
     width: 30%;
 }
 
-button{
+.botao{
     margin-left: 3em;
 }
