--- a/cliente/src/index.css
+++ b/cliente/src/index.css
@@ -2,7 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Open sans", "sans-serif";
+  Font-family: Tahoma, Verdana, Segoe, sans-serif;
+
 }
 
 html, body, #root{
