--- a/cliente/src/components/Menu.module.css
+++ b/cliente/src/components/Menu.module.css
@@ -1,39 +1,48 @@
-li{
+li {
     list-style: none;
     margin: 0 8rem;
     padding: 1rem;
 }
 
 a{
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    
+    transition: .5s;
+    padding: .5rem;
+    border-radius: 15px;
 }
-
-ul{
+ul {
     justify-content: space-between;
     display: flex;
+    margin-top: 16px;
 }
-img{
+
+img {
     width: 100px;
 }
-header{
-   justify-content: space-between;
-   align-items: center;
+
+header {
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     display: flex;
     background-color: #9A3432;
 
 }
 
-.links{
-    width: 80%;
-   
+.links a:hover{
+    background-color: #f0eded;
+    color: #9A3432;
 }
 
-.active-button {
-    background-color: pink;
-    color: red;
-  }
-  
+.links {
+    width: 80%;
+
+}
+li{
+    border-radius: 15px;
+}
+.current {
+    background-color: red;
+    color: white;
+    font-weight: bold;
+}
+
