--- a/cliente/src/components/form/Input.module.css
+++ b/cliente/src/components/form/Input.module.css
@@ -6,13 +6,13 @@
   }
   
   .form_control label {
-    margin-bottom: 0.6em;
+    margin-bottom: 0.em;
     font-weight: bold;
   }
   
   input{
     text-align: center;
-    width: 70%;
+    width: 7%;
     border:solid 2px #7b7b7b;
     border-radius: 10px;
 
