--- a/cliente/src/components/modulos/Cliente/cadastrarCliente.module.css
+++ b/cliente/src/components/modulos/Cliente/cadastrarCliente.module.css
@@ -1,35 +1,28 @@
-.botao{
-    font-size: 1em;
-    padding: .5em;
-    cursor: pointer;
-    background-color: transparent;
-    border: solid 1px #000;
-    border-radius: 10px;
-    transition: .5s;
-  }
+.client{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1.5em;
+}
+h3{
+  font-weight: 900;
+}
+.formulario{
+  border: solid rgb(133, 33, 33) 3px;
+  border-radius:2em ;
+  padding: 1em;
+  width: 60%;
+  text-align: center;
+  margin-bottom: 2em;
   
-.botao:hover{
-    background-color: #9A3333;
-    color: #fff;
 }
-
-.comprimento{
-text-align: left;
-width: 100%;
-}
-
-
-.text{
-  text-align: left;
-}
-
-
 p{
   margin-bottom: 1em;
   padding: .5em;
 }
 
 input{
+  width: 50%;
   display: flex;
   padding: .5em;
 }
@@ -42,8 +35,8 @@ text-align: center;
 .select {
   width: 70%;
   height: 45px;
-  border:solid 1px #cac0c0b4;
-  border-radius: 8px;
+  border:solid 2px #7b7b7b;
+  border-radius: 10px;
   padding: 0 10px;
   font-size: 14px;
   font-family: sans-serif;
@@ -51,7 +44,12 @@ text-align: center;
 }
 
 /* Seletor para as opções do select */
-
+.select option {
+  padding: 5px 10px;
+  background-color: #fff;
+  color: #222;
+  font-size: 14px;
+}
 
 /* Seletor para a opção selecionada */
 .select option:hover,
@@ -74,7 +72,9 @@ text-align: center;
 }
 
 /* Seletor para o drop down do select */
-
+.select:focus:after {
+  border-left-color: #000;
+}
 
 label{
   margin-top: 0px;
@@ -84,16 +84,24 @@ label{
 
 
 .inputs{
+  
 justify-content: space-around;
 display: flex;
 }
 
+.fornecedor{
+width: 50%;
+}
 .fornecedor select{
 margin-top: 10px;
 
 }
 
+.medida{
+margin-left: 50px;
+}
 
-.select{
-  width: 100%;
+.medida Input{
+width: 250px;
+color: rebeccapurple;
 }
