--- a/cliente/src/components/modulos/Estoque/cadastrarEstoque.module.css
+++ b/cliente/src/components/modulos/Estoque/cadastrarEstoque.module.css
@@ -2,14 +2,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 3em;
+    margin: 1.5em;
 }
 .formulario{
     border: solid rgb(133, 33, 33) 3px;
     border-radius:2em ;
-    padding: 2em;
+    padding: 1em 2em;
     text-align: center;
     margin-bottom: 2em;
+   justify-content: center;
     
 }
 p{
@@ -17,19 +18,23 @@ p{
     padding: .5em;
 }
 
-input{
-    display: flex;
-    padding: .5em;
-}
+
 
 button{
   text-align: center;
 }
 
+label{
+  padding-bottom: 9px;
+}
+
+p{
+  margin-bottom: 0px;
+}
 
 
 /* Seletor para o select */
-.select {
+select {
     width: 70%;
     height: 45px;
     border:solid 2px #7b7b7b;
@@ -71,4 +76,12 @@ button{
   /* Seletor para o drop down do select */
   .select:focus:after {
     border-left-color: #000;
+  }
+ 
+  .inputs{
+padding: 0px 5.5em;
+  }
+
+  h3{
+    margin-bottom: 0px;
   }
