--- a/cliente/src/components/modulos/Fornecedor/ExibirDadosFornecedor.module.css
+++ b/cliente/src/components/modulos/Fornecedor/ExibirDadosFornecedor.module.css
@@ -1,28 +1,7 @@
-.exibicao{
-    width: 100%;
-    display: flex;
-}
-
-.menu{
-    padding-top: 2em;
-    width: 20%;
-    margin-left: 20px;
-    height: auto;
-    
- 
-}
-
-.produtos{
-  
-    width: 100%;
-}
-
 .paiItem{
     margin-top: 1em;
     display: flex;
     justify-content: center;
-    cursor: pointer;
-    
 }
 
 .item{
@@ -35,8 +14,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    color: #fff;
-    background-color: #9A3333;
+    color: #9A3333;
     
 }
 
@@ -49,3 +27,29 @@
 .item div{
     width: 20%;
 }
+
+.menu{
+    width: 33%;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+
+.icone{
+    padding: .4em;
+    font-size: 1.2em;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: .5s;
+    border-radius: 5px;
+    color: #000;
+}
+
+.icone:hover{
+    color: #fff;
+    background-color: #9A3333;
+
+}
+
