--- a/cliente/src/components/modulos/Fornecedor/dialogFornecedor.module.css
+++ b/cliente/src/components/modulos/Fornecedor/dialogFornecedor.module.css
@@ -1,22 +1,19 @@
-.product{
+.backgroud{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: black;
+  }
+  
+  .inputs{
+    justify-content: space-around;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1.5em;
-}
-h3{
-    font-weight: 900;
-}
-.formulario{
-    border: solid rgb(133, 33, 33) 3px;
-    border-radius:2em ;
-    padding: 1em;
-    width: 60%;
-    text-align: center;
-    margin-bottom: 2em;
-    
-}
-p{
+  }
+
+
+  p{
     margin-bottom: 1em;
     padding: .5em;
 }
@@ -90,7 +87,10 @@ button{
 .fornecedor{
   width: 50%;
 }
+.fornecedor select{
+  margin-top: 10px;
 
+}
 
 .medida{
   margin-left: 50px;
@@ -98,5 +98,6 @@ button{
 
 .medida Input{
   width: 250px;
-
+  color: rebeccapurple;
 }
+
