--- a/cliente/src/components/modulos/Produto/ExibirDados.module.css
+++ b/cliente/src/components/modulos/Produto/ExibirDados.module.css
@@ -1,32 +1,13 @@
-.exibicao{
-    width: 100%;
-    display: flex;
-}
-
-.menu{
-    padding-top: 2em;
-    width: 20%;
-    margin-left: 20px;
-    height: auto;
-    
- 
-}
-
-.produtos{
-  
-    width: 100%;
-}
-
 .paiItem{
     margin-top: 1em;
     display: flex;
     justify-content: center;
-    cursor: pointer;
-    
+  
 }
 
 .item{
-
+    cursor: pointer;
+    font-size: 5pt;
     border: solid black 2px;
     border-radius: 20px;
     padding: .5em;
@@ -35,8 +16,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    color: #fff;
-    background-color: #9A3333;
+    color: #9A3333;
     
 }
 
@@ -49,3 +29,14 @@
 .item div{
     width: 20%;
 }
+
+.menu{
+    width: 33%;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+
+
+
