--- a/cliente/src/components/modulos/Refeicao/Refeicoes.module.css
+++ b/cliente/src/components/modulos/Refeicao/Refeicoes.module.css
@@ -1,35 +1,15 @@
-.exibicao{
-    width: 100%;
-    display: flex;
-}
-
-.menu{
-    padding-top: 2em;
-    width: 20%;
-    margin-left: 20px;
-    height: auto;
-    
- 
-}
-
-.produtos{
-  
-    width: 100%;
-}
-
-.paiItem{
+/* Refeicoes.module.css */
+.paiItem {
     margin-top: 1em;
     display: flex;
     justify-content: center;
     cursor: pointer;
-    
-}
-
-.item{
-
+  }
+  
+  .item {
     border: solid black 2px;
     border-radius: 20px;
-    padding: .5em;
+    padding: 0.5em;
     width: 60%;
     display: flex;
     justify-content: space-between;
@@ -37,15 +17,15 @@
     text-align: center;
     color: #fff;
     background-color: #9A3333;
-    
-}
-
-.item:hover{
+  }
+  
+  .item:hover {
     background-color: #9A3333;
     color: #fff;
-    transition: .5s;
-}
-
-.item div{
+    transition: 0.5s;
+  }
+  
+  .item div {
     width: 20%;
-}
+  }
+  
