--- a/cliente/src/components/modulos/Refeicao/Refeicoes.module.css
+++ b/cliente/src/components/modulos/Refeicao/Refeicoes.module.css
@@ -1,6 +1,6 @@
 /* Refeicoes.module.css */
 .paiItem {
-    margin-top: 1em;
+    margin-top: .5em;
     display: flex;
     justify-content: center;
     cursor: pointer;
@@ -9,7 +9,7 @@
   .item {
     border: solid black 2px;
     border-radius: 20px;
-    padding: 0.5em;
+    padding: .5em;
     width: 60%;
     display: flex;
     justify-content: space-between;
@@ -29,3 +29,33 @@
     width: 20%;
   }
   
+.navegacao{
+  margin: 1em;
+  display: flex;
+  
+ justify-content:center;
+}
+
+.anterior button {
+  border: 2px solid rgba(0, 0, 0, 0.726);
+  margin: 1em;
+  font-weight: bold;
+  background-color: #9A3432;
+  transition: background-color 0.3s ease; /* Adiciona uma transição suave */
+}
+
+.proximo button {
+  border: 2px solid rgba(0, 0, 0, 0.508);
+  margin: 1em;
+  font-weight: bold;
+  background-color: #9A3432;
+  transition: background-color 0.3s ease; /* Adiciona uma transição suave */
+}
+
+/* Adiciona o efeito hover */
+.anterior button:hover,
+.proximo button:hover {
+  background-color: #f7f7f7; /* Altere para a cor desejada durante o hover */
+  color: #9A3432;
+ 
+}
